--- a/style.css
+++ b/style.css
@@ -1,6 +1,49 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+.banner{
+    width: 100%;
+    height: 100vh;
+    background-image: url(background.png);
+    background-size: cover;
+    background-position: center;
+}
+.navbar{
+    width: 85%;
+    margin: auto;
+    padding: 33px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.navbar header nav{
+    display: inline-block;
+    margin: 0 20px;
+}
+.content{
+    font-size: 50px;
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%);
+    text-align: left;
+    color: #6103be;
+}
+.content2{
+    width: 100%;
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    transform: translateY(-50%);
+    text-align: left;
+    color: black;
+}
 body{
     background-color: #d9d9d9;
 }
-h3{
+h1,h3{
     color: #6103be;
 }
